test Book/Cap id negative cases